# fastapi_template

./: .gitignore  Dockerfile  pyproject.toml  readme.md  setup.sh
project_name/: server.py
project_name/models/: people.py
project_name/routers/: fakedata.py  info.py
project_name/services/: fakegen.py
