[tool.poetry]
name = "fastapi-template"
version = "1.0"
description = "api template with fastapi in py3.11"
authors = ["miyago9267 <miyagomizugen@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
uvicorn = "^0.25.0"
python-dotenv = "^1.0.0"
fastapi = "^0.108.0"
faker = "^22.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
